@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ae.apps.messagecounter"
     android:versionCode="280"
-    android:versionName="2.2" >
+    android:versionName="2.3" >
 
     <uses-sdk
         android:minSdkVersion="8"
